# garden-ai

./: .gitignore  Cargo.toml  MCP_SETUP.md  README.md  architecture_comparison.html  architecture_comparison.md  architecture_diagram.html  architecture_diagram.md  architecture_diagram_v2.html  architecture_diagram_v2.md  garden-ai-pid1-reaper-prompt.md  garden-ai-vsock-implementation-prompt.md  parse_apk.sh  roadmap.md
crates/garden-agent/: Cargo.toml
crates/garden-agent/src/: main.rs  net.rs
crates/garden-cli/: Cargo.toml
crates/garden-cli/src/: main.rs
crates/garden-common/: Cargo.toml  build.rs
crates/garden-common/proto/: agent.proto
crates/garden-common/src/: error.rs  ipc.rs  lib.rs  types.rs
crates/garden-daemon/: Cargo.toml  build.rs  run.sh
crates/garden-daemon/src/: main.rs  virtualizer.rs
crates/garden-daemon/src/swift/: Virtualizer.swift  bridging.h  bridging_impl.swift
crates/garden-ebpf/: Cargo.toml
crates/garden-ebpf-common/: Cargo.toml
crates/garden-ebpf-common/src/: lib.rs
crates/garden-ebpf-probes/: Cargo.toml
crates/garden-ebpf-probes/src/: main.rs
crates/garden-ebpf/src/: events.rs  lib.rs  policy.rs  tracer.rs
crates/garden-ebpf/tests/: probe_loading.rs
crates/garden-mcp/: Cargo.toml
crates/garden-mcp/src/: lib.rs  resources.rs  server.rs  tools.rs
garden-ui/: project.yml
garden-ui/GardenUI/: ContentView.swift  GardenApp.swift  GardenUI.entitlements  RustBridge.swift  VMManager.swift
guest/: README.md
guest/initramfs/: init
guest/initramfs/lib/: libcryptsetup.so.12.9.0  libkmod.so.2.4.1
guest/initramfs/lib/modules/6.12.13-0-virt/: modules.alias  modules.builtin.modinfo  modules.dep  modules.devname  modules.order  modules.symbols
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/crypto/: crc32_generic.ko  crc32c_generic.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/block/: loop.ko  virtio_blk.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/hid/: hid-generic.ko  hid.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/hwmon/: hwmon.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/i2c/: i2c-core.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/net/: net_failover.ko  virtio_net.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/pps/: pps_core.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/ptp/: ptp.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/scsi/: scsi_common.ko  scsi_mod.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/vdpa/: vdpa.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/drivers/virtio/: virtio_balloon.ko  virtio_dma_buf.ko  virtio_input.ko  virtio_mem.ko  virtio_mmio.ko  virtio_vdpa.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/fs/fat/: fat.ko  msdos.ko  vfat.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/fs/fuse/: fuse.ko  virtiofs.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/fs/nls/: mac-celtic.ko  mac-centeuro.ko  mac-croatian.ko  mac-cyrillic.ko  mac-gaelic.ko  mac-greek.ko  mac-iceland.ko  mac-inuit.ko  mac-roman.ko  mac-romanian.ko  mac-turkish.ko  nls_ascii.ko  nls_cp1250.ko  nls_cp1251.ko  nls_cp1255.ko  nls_cp437.ko  nls_cp737.ko  nls_cp775.ko  nls_cp850.ko  nls_cp852.ko  nls_cp855.ko  nls_cp857.ko  nls_cp860.ko  nls_cp861.ko  nls_cp862.ko  nls_cp863.ko  nls_cp864.ko  nls_cp865.ko  nls_cp866.ko  nls_cp869.ko  nls_cp874.ko  nls_cp932.ko  nls_cp936.ko  nls_cp949.ko  nls_cp950.ko  nls_euc-jp.ko  nls_iso8859-1.ko  nls_iso8859-13.ko  nls_iso8859-14.ko  nls_iso8859-15.ko  (+12 more)
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/fs/overlayfs/: overlay.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/fs/squashfs/: squashfs.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/net/core/: failover.ko
guest/initramfs/lib/modules/6.12.13-0-virt/kernel/net/packet/: af_packet.ko
guest/initramfs/usr/share/udhcpc/: default.script
guest/initrd_tmp/lib/: ld-musl-aarch64.so.1  libapk.so.2.14.0  libcrypto.so.3  libdevmapper.so.1.02  libssl.so.3
guest/initrd_tmp/lib/modules/6.6.110-0-virt/: modules.alias  modules.builtin  modules.builtin.modinfo  modules.dep  modules.order  modules.symbols
guest/initrd_tmp/lib/modules/6.6.110-0-virt/kernel/crypto/: crc32_generic.ko  crc32c_generic.ko
guest/initrd_tmp/lib/modules/6.6.110-0-virt/kernel/drivers/block/: loop.ko  virtio_blk.ko
guest/initrd_tmp/lib/modules/6.6.110-0-virt/kernel/drivers/hid/: hid-generic.ko  hid.ko
guest/initrd_tmp/lib/modules/6.6.110-0-virt/kernel/drivers/hv/: hv_vmbus.ko
guest/initrd_tmp/sbin/: apk  nlplug-findfs
guest/initrd_tmp/usr/lib/: libargon2.so.1  libjson-c.so.5.3.0  liblzma.so.5.4.5  libzstd.so.1.5.5
guest/initrd_tmp/var/cache/misc/: modloop-virt.SIGN.RSA.alpine-devel@lists.alpinelinux.org-616ae350.rsa.pub
guest/kernel/: .gitignore  extract.py
guest/modules_tmp/extracted/modules/6.12.67-0-virt/: modules.alias  modules.builtin  modules.builtin.modinfo  modules.dep  modules.devname  modules.order  modules.softdep  modules.symbols
guest/modules_tmp/extracted/modules/6.12.67-0-virt/kernel/crypto/: adiantum.ko  aegis128.ko  af_alg.ko  algif_aead.ko  algif_hash.ko  algif_rng.ko  algif_skcipher.ko  ansi_cprng.ko  authenc.ko  authencesn.ko  blake2b_generic.ko  blowfish_common.ko  blowfish_generic.ko  camellia_generic.ko  cast5_generic.ko  cast6_generic.ko  cast_common.ko  ccm.ko  chacha20poly1305.ko  chacha_generic.ko  cmac.ko  crc32_generic.ko  crc32c_generic.ko  crypto_engine.ko  crypto_user.ko  curve25519-generic.ko  des_generic.ko  ecc.ko  ecdh_generic.ko  ecdsa_generic.ko  echainiv.ko  essiv.ko  fcrypt.ko  hctr2.ko  keywrap.ko  lrw.ko  lz4.ko  lz4hc.ko  md4.ko  michael_mic.ko  (+19 more)
guest/modules_tmp/extracted/modules/6.12.67-0-virt/kernel/fs/: binfmt_misc.ko  mbcache.ko
guest/modules_tmp/extracted/modules/6.12.67-0-virt/kernel/lib/: crc-ccitt.ko  crc-itu-t.ko  crc16.ko  crc7.ko  crc8.ko  libcrc32c.ko  lru_cache.ko  ts_bm.ko  ts_fsm.ko  ts_kmp.ko
kernel/: build.sh  garden.config
scripts/: test_ebpf_telemetry.sh  test_mcp_agent.sh
(+999 files in other folders)
