[workspace]
members = [
    "crates/garden-daemon",
    "crates/garden-mcp",
    "crates/garden-cli",
    "crates/garden-ebpf",
    "crates/garden-ebpf-common",
    "crates/garden-common",
    "crates/garden-agent",
]
exclude = [
    "crates/garden-ebpf-probes",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-ai/garden"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# MCP Protocol
rmcp = { version = "0.15", features = ["server", "macros", "transport-streamable-http-server", "transport-io"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }

# eBPF (Linux-only)
aya = "0.12"
aya-log = "0.2"

# Telemetry utilities
bytes = "1"
glob = "0.3"
