[package]
name = "garden-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Garden AI — boot sandboxes, run commands, manage VMs"

[[bin]]
name = "garden"
path = "src/main.rs"

[dependencies]
garden-common = { path = "../garden-common" }
garden-mcp = { path = "../garden-mcp" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tonic = "0.11"
prost = "0.12"
