[package]
name = "garden-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, errors, and IPC protocol for Garden AI"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.37", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
