[package]
name = "garden-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
objc = "0.2.7"
libc = "0.2"
garden-common = { path = "../garden-common" }
tonic = "0.11"
prost = "0.12"
tokio = { workspace = true }
hyper = "0.14"
tower = "0.4"

[build-dependencies]
cc = "1.0"
