[package]
name = "garden-ebpf-probes"
version = "0.1.0"
edition = "2021"
description = "eBPF kernel-side probe programs for Garden AI security telemetry"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
garden-ebpf-common = { path = "../garden-ebpf-common" }

[[bin]]
name = "garden-ebpf-probes"
path = "src/main.rs"
