[package]
name = "garden-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "eBPF security daemon for Garden AI (userspace loader, runs inside guest VM)"

[dependencies]
garden-common = { path = "../garden-common" }
garden-ebpf-common = { path = "../garden-ebpf-common", features = ["user"] }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }

# eBPF dependencies are Linux-only
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
bytes = { workspace = true }
